[package]
name = "markdown-photo-minutes-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bpaf = "0.9"
fs-err = "2.9.0"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[dev-dependencies]
speculoos = { version = "0.11.0", default-features = false }
tempfile = "3.5.0"
