[package]
name = "markdown-photo-minutes-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bpaf = "0.9"
fs-err = "2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
kamadak-exif = "0.5"

[dev-dependencies]
speculoos = { version = "0.11", default-features = false }
tempfile = "3"
